fixed navbar on mobile and added overflow-x:hidden to hide right white line

--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -5,11 +5,10 @@
     }
     100%{
         opacity: 1;
-        z-index: 10;
+        z-index: 1;
         transform: translateY(0);
     }
 }
-
 
 .bounce-top {
     display: block; //we animate a block object, not a linear one, we add it so that it displays well in other browsers
